--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 .header{
 	min-height: 100vh;
 	width: 100%;
-	background-image: linear-gradient(rgba(4,9,30,0.7),rgba(4,9,30,0.7)),url(skate.jpg);
+	background-image: linear-gradient(rgba(4,9,30,0.7),rgba(4,9,30,0.7)),url(image/skate.jpg);
 	background-position: center;
 	background-repeat: no-repeat;
 	background-size: cover;
@@ -98,7 +98,7 @@ nav img{
 .btn:hover{
 	 box-shadow: inset 590px 0 0 0 #f44336;
 }
-nav .fa{
+nav .fas{
 	display: none;
 }
 @media(max-width: 700px){
@@ -111,13 +111,23 @@ nav .fa{
     .nav-links {
     	position: absolute;
     	background:#f44336;
-    	height:100vh;
+    	height: 100vh;
     	width: 200px;
-    	top:0;
-    	right: 0;
+    	top: 0;
+    	right: -200px;
     	text-align:left;
     	z-index: 2;
     }
+   nav .fas{ 
+   	display: block;
+   	color: #fff;
+   	margin: 10px;
+   	font-size:22px;
+   	cursor: pointer;
+   }
+   .nav-links ul{
+   	padding: 30px;
+   }
 }
 /*-------- course ----- */
 .course{
@@ -238,8 +248,9 @@ h3{
 	
 }
 .skatepark-col img{
-	width: 1200px;
+	width: 900px;
 	display: flex;
+	padding-right: 500;
 	align-items: center;
 	justify-content: center;
 	overflow: hidden;
