--- a/style.css
+++ b/style.css
@@ -110,7 +110,7 @@ nav .fas{
     }
     .nav-links {
     	position: absolute;
-    	background:#f44336;
+    	background:transparent;
     	height: 100vh;
     	width: 200px;
     	top: 0;
@@ -126,7 +126,7 @@ nav .fas{
    	cursor: pointer;
    }
    .nav-links ul{
-   	padding: 30px;
+   	padding: 15px;
    }
 }
 /*-------- course ----- */
