--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 .header{
 	min-height: 100vh;
 	width: 100%;
-	background-image: linear-gradient(rgba(4,9,30,0.7),rgba(4,9,30,0.7)),url(skate.jpg);
+	background-image: linear-gradient(rgba(4,9,30,0.7),rgba(4,9,30,0.7)),url(image/skate.jpg);
 	background-position: center;
 	background-repeat: no-repeat;
 	background-size: cover;
@@ -112,7 +112,7 @@ nav .fas{
     	position: absolute;
     	background:transparent;
     	height: 100vh;
-    	width: 200px;
+    	width:200px;
     	top: 0;
     	right: -200px;
     	text-align:left;
@@ -126,8 +126,22 @@ nav .fas{
    	cursor: pointer;
    }
    .nav-links ul{
-   	padding: 15px;
+   	padding: 30px;
    }
+   .btn{
+	 width: 400px;
+	 display: inline-block;
+     text-decoration:none;
+     color: #fff;
+     border: 1px solid #fff;
+     padding: 12px 34px;
+	 box-shadow: inset 0 0 0 0 #f9e506;
+	 transition: ease-out 0.3s;
+	 font-size: 2rem;
+}
+.btn:hover{
+	 box-shadow: inset 590px 0 0 0 #f44336;
+}
 }
 /*-------- course ----- */
 .course{
@@ -186,6 +200,11 @@ h3{
 }
 .course-col:hover{
 	box-shadow: 0 0 20px 0px rgba(0,0,0,0.2);
+}
+@media(max-width: 700px){
+	.row{
+		flex-direction: column;
+	}
 }
 /*------- brand -----*/
 .brand{
@@ -263,6 +282,11 @@ h3{
 	margin-top: 26px;
 	margin-bottom: 15px;
 	text-align: center; 
+}
+@media(max-width: 700px){
+	.skatepark-col img{
+		width: 400px;
+	}
 }
 /*--------testimonials-------*/
 
