--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ nav img{
 	list-style: none;
 	display: inline-block;
 	padding: 8px 12px;
-	position: relative;
+	position: fixed;
 }
 .nav-links ul li a{
    color: #f44336;
