--- a/style.css
+++ b/style.css
@@ -326,7 +326,7 @@ h3{
 .cta{
 	margin: 100px auto ;
 	width: 80%;
-	background-image: linear-gradient(rgba(0,0,0,0.7),rgba(0,0,0,0.7)),url(image/cover.jpg);
+	background-image: linear-gradient(rgba(0,0,0,0.7),rgba(0,0,0,0.7)),url(cover.jpg);
 	background-position: center;
 	background-size: cover;
 	border-radius: 10px;
