--- a/style.css
+++ b/style.css
@@ -1,36 +1,356 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap");
+
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
+body,
+button {
+  font-family: "Poppins", sans-serif;
+}
+.video{
+	position:relative;
+	width: 100%;
+	top: 200;
+	left:0;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	overflow: hidden;
+	
+}
+.video2{
+	position:relative;
+	width: 100%;
+	top: 200;
+	left:0;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	overflow: hidden;
+	
+}
+
+.container {
+  min-height: 100vh;
+  width: 100%;
+  background-color: #485461;
+  background-image: linear-gradient(135deg, #485461 0%, #28313b 74%);
+  overflow-x: hidden;
+  transform-style: preserve-3d;
+}
+
+.navbar {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 10;
+  height: 3rem;
+}
+
+.menu {
+  max-width: 72rem;
+  width: 100%;
+  margin: 0 auto;
+  padding: 0 2rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  color: #fff;
+}
+
+.logo {
+  font-size: 1.1rem;
+  font-weight: 600;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  line-height: 4rem;
+}
+
+.logo span {
+  font-weight: 300;
+}
+
+.hamburger-menu {
+  height: 4rem;
+  width: 3rem;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+}
+
+.bar {
+  width: 1.9rem;
+  height: 1.5px;
+  border-radius: 2px;
+  background-color: #eee;
+  transition: 0.5s;
+  position: relative;
+}
+
+.bar:before,
+.bar:after {
+  content: "";
+  position: absolute;
+  width: inherit;
+  height: inherit;
+  background-color: #eee;
+  transition: 0.5s;
+}
+
+.bar:before {
+  transform: translateY(-9px);
+}
+
+.bar:after {
+  transform: translateY(9px);
+}
+
+.main {
+  position: relative;
+  width: 100%;
+  left: 0;
+  z-index: 5;
+  overflow: hidden;
+  transform-origin: left;
+  transform-style: preserve-3d;
+  transition: 0.5s;
+}
+
+header {
+  min-height: 100vh;
+  width: 100%;
+  background: url("image/a.jpg") no-repeat top center / cover;
+  position: relative;
+}
+
+.overlay {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  min-height: 100vh;
+  width: 100%;
+  background-image: linear-gradient(rgba(4,9,30,0.7),rgba(4,9,30,0.7)),url(image/skate.jpg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+  background-color: rgba(0, 0, 0, 0.5); 
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.inner {
+  max-width: 35rem;
+  text-align: center;
+  color: #fff;
+  padding: 0 2rem;
+}
+
+.title {
+  font-size: 2.7rem;
+}
+
+
+
+.container.active .bar {
+  transform: rotate(360deg);
+  background-color: transparent;
+}
+
+.container.active .bar:before {
+  transform: translateY(0) rotate(45deg);
+}
+
+.container.active .bar:after {
+  transform: translateY(0) rotate(-45deg);
+}
+
+.container.active .main {
+  animation: main-animation 0.5s ease;
+  cursor: pointer;
+  transform: perspective(1300px) rotateY(20deg) translateZ(310px) scale(0.5);
+}
+
+@keyframes main-animation {
+  from {
+    transform: translate(0);
+  }
+
+  to {
+    transform: perspective(1300px) rotateY(20deg) translateZ(310px) scale(0.5);
+  }
+}
+
+.links {
+  position: absolute;
+  width: 30%;
+  right: 0;
+  top: 0;
+  height: 100vh;
+  z-index: 2;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+ul {
+  list-style: none;
+}
+
+.links a {
+  text-decoration: none;
+  color: #eee;
+  padding: 0.7rem 0;
+  display: inline-block;
+  font-size: 1rem;
+  font-weight: 300;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  transition: 0.3s;
+  opacity: 0;
+  transform: translateY(10px);
+  animation: hide 0.5s forwards ease;
+}
+
+.links a:hover {
+  color: #fff;
+}
+
+.container.active .links a {
+  animation: appear 0.5s forwards ease var(--i);
+}
+
+@keyframes appear {
+  from {
+    opacity: 0;
+    transform: translateY(10px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0px);
+  }
+}
+
+@keyframes hide {
+  from {
+    opacity: 1;
+    transform: translateY(0px);
+  }
+  to {
+    opacity: 0;
+    transform: translateY(10px);
+  }
+}
+
+.shadow {
+  position: absolute;
+  width: 100%;
+  height: 100vh;
+  top: 0;
+  left: 0;
+  transform-style: preserve-3d;
+  transform-origin: left;
+  transition: 0.5s;
+  background-color: white;
+}
+
+.shadow.one {
+  z-index: -1;
+  opacity: 0.15;
+}
+
+.shadow.two {
+  z-index: -2;
+  opacity: 0.1;
+}
+
+.container.active .shadow.one {
+  animation: shadow-one 0.6s ease-out;
+  transform: perspective(1300px) rotateY(20deg) translateZ(215px) scale(0.5);
+}
+
+@keyframes shadow-one {
+  0% {
+    transform: translate(0);
+  }
+
+  5% {
+    transform: perspective(1300px) rotateY(20deg) translateZ(310px) scale(0.5);
+  }
+
+  100% {
+    transform: perspective(1300px) rotateY(20deg) translateZ(215px) scale(0.5);
+  }
+}
+
+.container.active .shadow.two {
+  animation: shadow-two 0.6s ease-out;
+  transform: perspective(1300px) rotateY(20deg) translateZ(120px) scale(0.5);
+}
+
+@keyframes shadow-two {
+  0% {
+    transform: translate(0);
+  }
+
+  20% {
+    transform: perspective(1300px) rotateY(20deg) translateZ(310px) scale(0.5);
+  }
+
+  100% {
+    transform: perspective(1300px) rotateY(20deg) translateZ(120px) scale(0.5);
+  }
+}
+
+.container.active .main:hover + .shadow.one {
+  transform: perspective(1300px) rotateY(20deg) translateZ(230px) scale(0.5);
+}
+
+.container.active .main:hover {
+  transform: perspective(1300px) rotateY(20deg) translateZ(340px) scale(0.5);
+}
 *{
-	margin: 0;
-	padding: 0;
-	font-family: 'Poppins', sans-serif;
+  margin: 0;
+  padding: 0;
+  font-family: 'Poppins', sans-serif;
 }
 .header{
-	min-height: 100vh;
-	width: 100%;
-	background-image: linear-gradient(rgba(4,9,30,0.7),rgba(4,9,30,0.7)),url(skate.jpg);
-	background-position: center;
-	background-repeat: no-repeat;
-	background-size: cover;
-	position: relative;
+  min-height: 100vh;
+  width: 100%;
+  background-image: linear-gradient(rgba(4,9,30,0.7),rgba(4,9,30,0.7)),url(image/skate.jpg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
 }
 nav{
-	display: flex;
-	padding: 2% 6%;
-	justify-content: space-between;
-	align-items: center;
+  display: flex;
+  padding: 2% 6%;
+  justify-content: space-between;
+  align-items: center;
 }
 nav img{
-	width: 150px;
+  width: 150px;
 }
 .nav-links{
-	z-index: 1;
-	left: 70%;
-	flex: 1;
-	text-align: right;
+  z-index: 1;
+  left: 70%;
+  flex: 1;
+  text-align: right;
 }
 .nav-links ul li{
-	list-style: none;
-	display: inline-block;
-	padding: 8px 12px;
+  list-style: none;
+  display: inline-block;
+  padding: 8px 12px;
+  position: relative;
 }
 .nav-links ul li a{
    color: #f44336;
@@ -38,28 +358,28 @@ nav img{
    font-size: 13px;
 }
 .nav-links ul li::after{
-	content: '';
-	width: 0%;
-	height: 2px;
-	background: #f44336;
-	display: block;
-	margin: auto;
-	transition: 0.5s;
+  content: '';
+  width: 0%;
+  height: 2px;
+  background: #f44336;
+  display: block;
+  margin: auto;
+  transition: 0.5s;
 }
 .nav-links ul li:hover::after{
-	width: 100%;
+  width: 100%;
 }
 .text-box{
-	width: 90%;
-	color: #fff;
-	position: absolute;
-	top:50%;
-	left: 50%;
-	transform: translate(-50%,-50%);
-	text-align: center;
+  width: 90%;
+  color: #fff;
+  position: absolute;
+  top:50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  text-align: center;
 }
 .text-box h1{
-	font-size: 62px;
+  font-size: 62px;
 }
 .text-box p{
    margin: 10px 0 40px;
@@ -78,282 +398,282 @@ nav img{
    cursor: pointer;
 }
 .hero-btn:hover{
-	border: 1px solid #f44336;
-	background:#f44336;
-	transition: 1s;
+  border: 1px solid #f44336;
+  background:#f44336;
+  transition: 1s;
 }
 .btn{
-	 width: 500px;
-	 display: inline-block;
+   width: 500px;
+   display: inline-block;
      text-decoration:none;
      color: #fff;
      border: 1px solid #fff;
      padding: 12px 34px;
-	 box-shadow: inset 0 0 0 0 #f9e506;
-	 transition: ease-out 0.3s;
-	 font-size: 2rem;
+   box-shadow: inset 0 0 0 0 #f9e506;
+   transition: ease-out 0.3s;
+   font-size: 2rem;
 }
 .btn:hover{
-	 box-shadow: inset 590px 0 0 0 #f44336;
+   box-shadow: inset 590px 0 0 0 #f44336;
 }
 nav .fas{
-	display: none;
+  display: none;
 }
-@media(max-width: 480px){
-	 .text-box h1{
-	   font-size: 20px;
+@media(max-width: 700px){
+   .text-box h1{
+     font-size: 20px;
     }
     .nav-links ul li{
-    	display: block;
+      display: block;
     }
     .nav-links {
-    	position: absolute;
-    	background:transparent;
-    	height: 100vh;
-    	width:200px;
-    	top: 0;
-    	right: -200px;
-    	text-align:left;
-    	z-index: 2;
+      position: absolute;
+      background:transparent;
+      height: 100vh;
+      width:200px;
+      top: 0;
+      right: -200px;
+      text-align:left;
+      z-index: 2;
     }
    nav .fas{ 
-   	display: block;
-   	color: #fff;
-   	margin: 10px;
-   	font-size:22px;
-   	cursor: pointer;
+    display: block;
+    color: #fff;
+    margin: 10px;
+    font-size:22px;
+    cursor: pointer;
    }
    .nav-links ul{
-   	padding: 30px;
+    padding: 30px;
    }
    .btn{
-	 width: 300px;
-	 display: inline-block;
+   width: 400px;
+   display: inline-block;
      text-decoration:none;
      color: #fff;
      border: 1px solid #fff;
      padding: 12px 34px;
-	 box-shadow: inset 0 0 0 0 #f9e506;
-	 transition: ease-out 0.3s;
-	 font-size: 2rem;
+   box-shadow: inset 0 0 0 0 #f9e506;
+   transition: ease-out 0.3s;
+   font-size: 2rem;
 }
 .btn:hover{
-	 box-shadow: inset 590px 0 0 0 #f44336;
+   box-shadow: inset 590px 0 0 0 #f44336;
 }
 }
 /*-------- course ----- */
 .course{
-	width: 80%;
-	margin: auto;
-	text-align: center;
-	padding: 0px;
+  width: 80%;
+  margin: auto;
+  text-align: center;
+  padding: 0px;
 }
 .video{
-	padding-bottom: 40px;
-	padding-top: 50px;
-	position:relative;
-	width: 100%;
-	top: 200;
-	left:0;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	overflow: hidden;
-	z-index: 5;
-	border-radius: 10px;
-	box-sizing: border-box;
-	transform: 0.5s
-	padding-bottom:15px	;
+  padding-bottom: 40px;
+  padding-top: 50px;
+  position:relative;
+  width: 100%;
+  top: 200;
+  left:0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
+  z-index: 5;
+  border-radius: 10px;
+  box-sizing: border-box;
+  transform: 0.5s
+  padding-bottom:15px ;
 }
 h1{
-	font-size: 36px;
-	font-weight: 600;
+  font-size: 36px;
+  font-weight: 600;
 }
 
 p{
-	color: #777;
-	font-size: 14px;
-	font-weight: 300;
-	line-height: 22px;
-	padding: 10px;
+  color: #777;
+  font-size: 14px;
+  font-weight: 300;
+  line-height: 22px;
+  padding: 10px;
 }
 .row{
-	margin-top: 5%;
-	display: flex;
-	justify-content: space-between;
+  margin-top: 5%;
+  display: flex;
+  justify-content: space-between;
 }
 .course-col{
-	flex-basis: 31%;
-	background: #fff3f3 ;
-	border-radius: 10px;
-	margin-bottom: 5%;
-	padding: 20px 12px;
-	box-sizing: border-box;
-	transform: 0.5s;
+  flex-basis: 31%;
+  background: #fff3f3 ;
+  border-radius: 10px;
+  margin-bottom: 5%;
+  padding: 20px 12px;
+  box-sizing: border-box;
+  transform: 0.5s;
 }
 h3{
-	text-align:center;
-	font-weight: 600;
-	margin: 10px 0; 
+  text-align:center;
+  font-weight: 600;
+  margin: 10px 0; 
 }
 .course-col:hover{
-	box-shadow: 0 0 20px 0px rgba(0,0,0,0.2);
+  box-shadow: 0 0 20px 0px rgba(0,0,0,0.2);
 }
-@media(max-width: 480px){
-	.row{
-		flex-direction: column;
-	}
+@media(max-width: 700px){
+  .row{
+    flex-direction: column;
+  }
 }
 /*------- brand -----*/
 .brand{
-	width: 80%;
-	margin: auto;
-	text-align: center;
-	padding: 50px;
+  width: 80%;
+  margin: auto;
+  text-align: center;
+  padding: 50px;
 }
 .brand-col{
-	flex-basis: 32%;
-	border-radius: 10px;
-	margin-bottom: 30px;
-	position: relative;
-	overflow: hidden;
+  flex-basis: 32%;
+  border-radius: 10px;
+  margin-bottom: 30px;
+  position: relative;
+  overflow: hidden;
 }
 .brand-col img{
-	width: 100%;
-	display: block;
+  width: 100%;
+  display: block;
 }
 .layer{
-	background:transparent;
-	height: 100%;
-	width: 100%;
-	position: absolute;
-	top: 0;
-	left: 0;
-	transform: 0.5s;
+  background:transparent;
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  transform: 0.5s;
 }
 .layer:hover{
-	background:rgba(226,0,0,0.7);
+  background:rgba(226,0,0,0.7);
 }
 .layer h3{
-	width: 100%;
-	font-weight: 500;
-	color: #fff;
-	font-size: 26px;
-	bottom: 0;
-	left: 50%;
-	transform: translateX(-50%);
-	position: absolute;
-	opacity: 0;
-	transition: 0.5s;
+  width: 100%;
+  font-weight: 500;
+  color: #fff;
+  font-size: 26px;
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  position: absolute;
+  opacity: 0;
+  transition: 0.5s;
 }
 .layer:hover h3{
-	bottom: 49%;
+  bottom: 49%;
     opacity:1;
 }
 /*-------skatepark-------*/
 .skatepark{
-	width: 80%;
-	margin: auto;
-	text-align: center;
-	padding-top: 100px;
+  width: 80%;
+  margin: auto;
+  text-align: center;
+  padding-top: 100px;
 }
 .skatepark-col{
-    align-items: left;		
-	flex-basis: 31%;
-	border-radius:10px;
-	margin-bottom: 5%;
-	
+    align-items: left;    
+  flex-basis: 31%;
+  border-radius:10px;
+  margin-bottom: 5%;
+  
 }
 .skatepark-col img{
-	width: 900px;
-	display: flex;
-	padding-right: 500;
-	align-items: center;
-	justify-content: center;
-	overflow: hidden;
-	border-radius:10px;
+  width: 900px;
+  display: flex;
+  padding-right: 500;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
+  border-radius:10px;
 }
 .skatepark-col p{
-	padding: 0;
+  padding: 0;
 }
 .skatepark-col h3{
-	margin-top: 26px;
-	margin-bottom: 15px;
-	text-align: center; 
+  margin-top: 26px;
+  margin-bottom: 15px;
+  text-align: center; 
 }
-@media(max-width: 480px){
-	.skatepark-col img{
-		width: 300px;
-	}
+@media(max-width: 700px){
+  .skatepark-col img{
+    width: 150px;
+  }
 }
 /*--------testimonials-------*/
 
 .testimonials{
-	width: 80%;
-	margin: auto;
-	padding-top: 100px;
+  width: 80%;
+  margin: auto;
+  padding-top: 100px;
     text-align: center;
 }
 .testimonials-col{
-	flex-basis: 44%;
-	border-radius: 10px;
-	margin-bottom: 5%;
-	text-align: left;
-	background:#fff3f3;
-	padding: 25px;
-	cursor: pointer;
-	display: flex;
+  flex-basis: 44%;
+  border-radius: 10px;
+  margin-bottom: 5%;
+  text-align: left;
+  background:#fff3f3;
+  padding: 25px;
+  cursor: pointer;
+  display: flex;
 }
 .testimonials-col img{
-	height: 40px;
-	margin-left: 5px;
-	margin-right:30px;
-	border-radius: 50%;
+  height: 40px;
+  margin-left: 5px;
+  margin-right:30px;
+  border-radius: 50%;
 }
 .testimonials-col p{
-	padding: 0;
-	text-align: center;
+  padding: 0;
+  text-align: center;
 }
 .testimonials-col h3{
-	margin-top: 15px;
-	text-align: center;
+  margin-top: 15px;
+  text-align: center;
 }
 .testimonials-col .fas{
-	color: #f44336;
+  color: #f44336;
 }
 /*------ call to action -----*/
 .cta{
-	margin: 100px auto ;
-	width: 80%;
-	background-image: linear-gradient(rgba(0,0,0,0.7),rgba(0,0,0,0.7)),url(cover.jpg);
-	background-position: center;
-	background-size: cover;
-	border-radius: 10px;
-	text-align: center;
-	padding: 100px 0;
+  margin: 100px auto ;
+  width: 80%;
+  background-image: linear-gradient(rgba(0,0,0,0.7),rgba(0,0,0,0.7)),url(image/cover.jpg);
+  background-position: center;
+  background-size: cover;
+  border-radius: 10px;
+  text-align: center;
+  padding: 100px 0;
 }
 .cta h1{
-	color:#fff;
+  color:#fff;
     margin-bottom: 40px;
     padding: 0;
 }
 /*------footer------*/
 .footer{
-	width: 100%;
-	text-align: center;
-	padding:30px 0;
+  width: 100%;
+  text-align: center;
+  padding:30px 0;
 }
 .footer h4{
-	margin-bottom: 25px;
-	margin-top: 20px;
-	font-weight: 600;
+  margin-bottom: 25px;
+  margin-top: 20px;
+  font-weight: 600;
 }
 .icons .fab{
-	color: #f44336;
-	margin:0 13px;
-	cursor: pointer;
-	padding-top: 18px 0;
+  color: #f44336;
+  margin:0 13px;
+  cursor: pointer;
+  padding-top: 18px 0;
 }
 .fa-heart{
-	color:#f44336;
+  color:#f44336;
 }
