--- a/style.css
+++ b/style.css
@@ -136,7 +136,7 @@ header {
   left: 0;
   min-height: 100vh;
   width: 100%;
-  background-image: linear-gradient(rgba(4,9,30,0.7),rgba(4,9,30,0.7)),url(image/skate.jpg);
+  background-image: linear-gradient(rgba(4,9,30,0.7),rgba(4,9,30,0.7)),url(skate.jpg);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -325,7 +325,7 @@ ul {
 .header{
   min-height: 100vh;
   width: 100%;
-  background-image: linear-gradient(rgba(4,9,30,0.7),rgba(4,9,30,0.7)),url(image/skate.jpg);
+  background-image: linear-gradient(rgba(4,9,30,0.7),rgba(4,9,30,0.7)),url(skate.jpg);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -645,7 +645,7 @@ h3{
 .cta{
   margin: 100px auto ;
   width: 80%;
-  background-image: linear-gradient(rgba(0,0,0,0.7),rgba(0,0,0,0.7)),url(image/cover.jpg);
+  background-image: linear-gradient(rgba(0,0,0,0.7),rgba(0,0,0,0.7)),url(cover.jpg);
   background-position: center;
   background-size: cover;
   border-radius: 10px;
