--- a/style.css
+++ b/style.css
@@ -10,28 +10,7 @@ body,
 button {
   font-family: "Poppins", sans-serif;
 }
-.video{
-	position:relative;
-	width: 100%;
-	top: 200;
-	left:0;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	overflow: hidden;
-	
-}
-.video2{
-	position:relative;
-	width: 100%;
-	top: 200;
-	left:0;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	overflow: hidden;
-	
-}
+
 
 .container {
   min-height: 100vh;
@@ -62,13 +41,6 @@ button {
   color: #fff;
 }
 
-.logo {
-  font-size: 1.1rem;
-  font-weight: 600;
-  text-transform: uppercase;
-  letter-spacing: 2px;
-  line-height: 4rem;
-}
 
 .logo span {
   font-weight: 300;
@@ -120,6 +92,18 @@ button {
   transform-style: preserve-3d;
   transition: 0.5s;
 }
+@media(max-width: 700px) {
+  .main{
+    position: relative;
+  width: 50%;
+  left: 0;
+  z-index: 5;
+  overflow: hidden;
+  transform-origin: left;
+  transform-style: preserve-3d;
+  transition: 0.5s;
+  }
+}
 
 header {
   min-height: 100vh;
@@ -136,7 +120,7 @@ header {
   left: 0;
   min-height: 100vh;
   width: 100%;
-  background-image: linear-gradient(rgba(4,9,30,0.7),rgba(4,9,30,0.7)),url(skate.jpg);
+  background-image: linear-gradient(rgba(4,9,30,0.7),rgba(4,9,30,0.7)),url(image/skate.jpg);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -147,12 +131,7 @@ header {
   align-items: center;
 }
 
-.inner {
-  max-width: 35rem;
-  text-align: center;
-  color: #fff;
-  padding: 0 2rem;
-}
+
 
 .title {
   font-size: 2.7rem;
@@ -325,7 +304,7 @@ ul {
 .header{
   min-height: 100vh;
   width: 100%;
-  background-image: linear-gradient(rgba(4,9,30,0.7),rgba(4,9,30,0.7)),url(skate.jpg);
+  background-image: linear-gradient(rgba(4,9,30,0.7),rgba(4,9,30,0.7)),url(image/skate.jpg);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -645,7 +624,7 @@ h3{
 .cta{
   margin: 100px auto ;
   width: 80%;
-  background-image: linear-gradient(rgba(0,0,0,0.7),rgba(0,0,0,0.7)),url(cover.jpg);
+  background-image: linear-gradient(rgba(0,0,0,0.7),rgba(0,0,0,0.7)),url(image/cover.jpg);
   background-position: center;
   background-size: cover;
   border-radius: 10px;
@@ -676,4 +655,36 @@ h3{
 }
 .fa-heart{
   color:#f44336;
+}
+
+.hero-btn2{
+
+   display: inline-block;
+   text-decoration:none;
+   color: #blue;
+   border: 1px solid #fff;
+   padding: 12px 34px;
+   font-size: 13px;
+   background:transparent;
+   position:relative;
+   cursor: pointer;
+}
+.hero-btn2:hover{
+  border: 1px solid #f44336;
+  background:#f44336;
+  transition: 1s;
+}
+.btn2{
+  margin-top: 40px;
+   width: 300px;
+   display: inline-block;
+     text-decoration:none;
+     color: #8784;
+     border: 1px solid #fff;
+   box-shadow: inset 0 0 0 0 #f9e506;
+   transition: ease-out 0.3s;
+   font-size: 2rem;
+}
+.btn2:hover{
+   box-shadow: inset 590px 0 0 0 #f44336;
 }
