--- a/style.css
+++ b/style.css
@@ -120,7 +120,7 @@ header {
   left: 0;
   min-height: 100vh;
   width: 100%;
-  background-image: linear-gradient(rgba(4,9,30,0.7),rgba(4,9,30,0.7)),url(image/skate.jpg);
+  background-image: linear-gradient(rgba(4,9,30,0.7),rgba(4,9,30,0.7)),url(skate.jpg);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
